--- a/views/selectpassword.ejs
+++ b/views/selectpassword.ejs
@@ -10,21 +10,121 @@
 
 <body>
 
-	<hr />
 	<div class="container">
-		<% items.imagesSet.forEach(function(imgdata) { %>
 		<div class="row">
 			<div class="col-lg-3">
-				<% if (imgdata && imgdata.image && imgdata.image.data) { %>
-					<img src="data:image/<%=imgdata.image.contentType%>;base64,<%=imgdata.image.data.toString('base64')%>"/>
-				<% } else { %>
-					<p>Image data is missing</p>
-				<% } %>
-				<h5><%= imgdata.name %></h5>
-			<p><%= imgdata._id  %></p>
+				<img src="data:image/<%=items[0].image.contentType%>;base64,<%=items[0].image.data.toString('base64')%>"/>
+				<h5><%= items[0].name %></h5>
+				<p><%= items[0]._id  %></p>
+			</div>
+			</div>
+			<div class="col-lg-3">
+				<img src="data:image/<%=items[1].image.contentType%>;base64,<%=items[1].image.data.toString('base64')%>%>"/>
+				<h5><%= items[1].name %></h5>
+				<p><%= items[1]._id  %></p>
+			</div>
+			</div>
+			<div class="col-lg-3">
+				<img src="data:image/<%=items[2].image.contentType%>;base64,<%=items[2].image.data.toString('base64')%>"/>
+				<h5><%= items[2].name %></h5>
+				<p><%= items[2]._id  %></p>
 			</div>
 		</div>
-		<% }) %>
+			<div class="col-lg-3">
+				<img src="data:image/<%=items[3].image.contentType%>;base64,<%=items[3].image.data.toString('base64')%>"/>
+				<h5><%= items[3].name %></h5>
+				<p><%= items[3]._id  %></p>
+			</div>
+			</div>
+			
+		</div>
+
+		<div class="row">
+			<div class="col-lg-3">
+				<img src="data:image/<%=items[4].image.contentType%>;base64,<%=items[4].image.data.toString('base64')%>"/>
+				<h5><%= items[4].name %></h5>
+				<p><%= items[4]._id  %></p>
+			</div>
+			</div>
+			<div class="col-lg-3">
+				<img src="data:image/<%=items[5].image.contentType%>;base64,<%=items[5].image.data.toString('base64')%>%>"/>
+
+				<h5><%= items[5].name %></h5>
+				<p><%= items[5]._id  %></p>
+			</div>
+			</div>
+			<div class="col-lg-3">
+				<img src="data:image/<%=items[6].image.contentType%>;base64,<%=items[6].image.data.toString('base64')%>"/>
+				<h5><%= items[6].name %></h5>
+				<p><%= items[6]._id  %></p>
+			</div>
+			</div>
+			<div class="col-lg-3">
+				<img src="data:image/<%=items[7].image.contentType%>;base64,<%=items[7].image.data.toString('base64')%>"/>
+				<h5><%= items[7].name %></h5>
+				<p><%= items[7]._id  %></p>
+			</div>
+			</div>
+			
+			
+		</div>
+		<div class="row">
+			<div class="col-lg-3">
+				<img src="data:image/<%=items[8].image.contentType%>;base64,<%=items[8].image.data.toString('base64')%>"/>
+				<h5><%= items[8].name %></h5>
+				<p><%= items[8]._id  %></p>
+			</div>
+			</div>
+			<div class="col-lg-3">
+				<img src="data:image/<%=items[9].image.contentType%>;base64,<%=items[9].image.data.toString('base64')%>%>"/>
+
+				<h5><%= items[9].name %></h5>
+				<p><%= items[9]._id  %></p>
+			</div>
+			</div>
+			<div class="col-lg-3">
+				<img src="data:image/<%=items[10].image.contentType%>;base64,<%=items[10].image.data.toString('base64')%>"/>
+				<h5><%= items[10].name %></h5>
+				<p><%= items[10]._id  %></p>
+			</div>
+			</div>
+			<div class="col-lg-3">
+				<img src="data:image/<%=items[11].image.contentType%>;base64,<%=items[11].image.data.toString('base64')%>"/>
+				<h5><%= items[11].name %></h5>
+				<p><%= items[11]._id  %></p>
+			</div>
+			</div>
+
+			
+			
+		</div>
+		<div class="row">
+			<div class="col-lg-3">
+				<img src="data:image/<%=items[12].image.contentType%>;base64,<%=items[12].image.data.toString('base64')%>"/>
+				<h5><%= items[12].name %></h5>
+				<p><%= items[12]._id  %></p>
+			</div>
+			</div>
+			<div class="col-lg-3">
+				<img src="data:image/<%=items[13].image.contentType%>;base64,<%=items[13].image.data.toString('base64')%>%>"/>
+				<h5><%= items[13].name %></h5>
+				<p><%= items[13]._id  %></p>
+			</div>
+			</div>
+			<div class="col-lg-3">
+				<img src="data:image/<%=items[14].image.contentType%>;base64,<%=items[14].image.data.toString('base64')%>"/>
+				<h5><%= items[14].name %></h5>
+				<p><%= items[14]._id  %></p>
+			</div>
+			</div>
+			<div class="col-lg-3">
+				<img src="data:image/<%=items[15].image.contentType%>;base64,<%=items[15].image.data.toString('base64')%>"/>
+				<h5><%= items[15].name %></h5>
+				<p><%= items[15]._id  %></p>
+			</div>
+			</div>
+			
+		</div>
 	</div>
 
 </body>
