--- a/views/imagegrid.ejs
+++ b/views/imagegrid.ejs
@@ -19,16 +19,16 @@
     <div class="container h-100 d-flex align-items-center justify-content-center">
       <div class="row justify-content-md-center">
         <% items.forEach(function(element) { %>
-        <div class="col-md-3 img-div">
-          <img src="data:image/<%=element.image.contentType%>;base64,<%=element.image.data.toString('base64')%>" class="img-fluid img-dim" data-image-id="<%=element._id%>">
+        <div class="col-3 img-div">
+          <img src="data:image/<%=element.image.contentType%>;base64,<%=element.image.data.toString('base64')%>" class="img-fluid img-dim m-2" data-image-id="<%=element._id%>">
         </div>
         <% }); %>
       </div>
       
     </div>
-    <button onclick="d">Next</button>
     <form action="/api/user/password/" method="post">
       <input type="hidden" name="imageIds" id="imageIdsInput">
+      <input type="hidden" name="userId" id = "userId" data-user-id="<%= userId %>">
       <button type="submit" onclick="passData()">Submit</button>
     </form>
     <!-- Include Bootstrap JS -->
@@ -54,10 +54,14 @@ images.forEach(image => {
 });
 
 function passData(){
-  const imageIdsInput = document.getElementById('imageIdsInput');
+    const imageIdsInput = document.getElementById('imageIdsInput');
   imageIdsInput.value = JSON.stringify(imageIds);
-  console.log(imageIdsInput.value)
+  const userIdInput = document.getElementById('userId');
+  userIdInput.value = JSON.stringify(userIdInput.dataset.userId)
+  console.log(userIdInput.value)
+  
 }
+
 
     </script>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
