Project data uploaded

--- a/views/imagegrid.ejs
+++ b/views/imagegrid.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Image Grid Example</title>
+    <title>Select Your Pattern</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Include Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
@@ -15,7 +15,7 @@
         width: 20%;
       }
       .row-style{
-        width: 65%;
+        width: 70%;
       }
       .col-style{
         padding: 5px;
