--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -12,7 +12,7 @@ html {
 }
 
 body {
-  background: url("/img/background.jpg") no-repeat center center/cover;
+  background: url("/images/background.jpg") no-repeat center center/cover;
   height: 100vh;
   overflow: hidden;
 }
