--- a/views/login.ejs
+++ b/views/login.ejs
@@ -17,44 +17,32 @@
 <body>
 	<!-- main -->
 	<div class="main-agileits">
-		<h1>Graphical Password Authentication System - Sign Up</h1>
+		<h1>Graphical Password Authentication System - Login</h1>
 		<!-- form -->
 		<div class="mainw3-agileinfo form" style="margin-left:100px; float:left;">
 			<div id="login">    
-				<form action="/api/user/register" method="POST" >
-					
+				<form method="post" action="/api/user/login"> 
 					<div class="field-wrap">
-						<label> Your Name<span class="req">*</span></label>
-						<input type="text" name="name">
+						<label>Email <span class="req">*</span> </label>
+						<input type="email" name="email" min=1 max=120 required>
 					</div>
-					<div class="field-wrap">
-						<label> Your Email<span class="req">*</span></label>
-						<input type="email" name="email">
-					</div>					
-					<div class="field-wrap">
-						<label> Phone No<span class="req">*</span> </label>
-						<input type="number" name="mobileNo" required>
-					</div>
-										
-					<button id="signup" class="button button-block"  type="submit">Sign Up</button> 					
+					<p class="forgot"><a href="/forgetpassword">Forgot Password?</a></p>
+					<center><button type="submit" id="getimage" class="button button-block" formaction="">Get Image</button></center>
+					<!--<button class="button button-block"/>Sign Up</button>-->
 				</form>
-				
-				<button href="/api/user/login" id="signup" class="button button-block" >Login</button>
-			</div>
-         
+				<span style="color:white;">Not a member?</span>
+				<button id="getimage" class="button button-block" href="/api/user/register/">SIGN UP</button>
+			</div>         
 		</div>
 		<!-- //form -->
 		<!-- image -->
-		<div class = "img" style="float:left; padding: 110px 150px 80px 150px; width: 33%;">
-			<a id="pixel">
-				<img id="blah" src="/images/logo.png" alt="" height=400 width=500/>
-			</a>
+		<div class = "img" style="float:left; padding: 150px 150px 80px 150px; width: 33%;">
+			<img id="blah" src="/images/logo.png" alt="" height=400 width=500 />
 		</div>
-		
+		<!-- //image -->
 	</div>
 	<!-- //main -->
 
-	
 	
 	<!-- JS -->
 	<script>
@@ -105,28 +93,6 @@
 		var setHeight = $(".mainw3-agileinfo form").height();
 		$(".img").height(setHeight);
 	</script>
-	<!-- <script>
-		var a = [];
-		$(function() {
-			$("#pixel").click(function(e) {
-				var offset = $(this).offset();
-				var relativeX = (e.pageX - offset.left);
-				var relativeY = (e.pageY - offset.top);
-				//alert(relativeX+','+relativeY);
-
-				a.push({X: relativeX, Y: relativeY});
-				//console.log(a);
-				$(".position").val("afaf");
-				
-				//document.getElementById('pixel1').value = a[0].X+","+a[0].Y;
-				var arr1 = Object.keys(a).map(function (key) { return a[key].X; });
-				var arr2 = Object.keys(a).map(function (key) { return a[key].Y; });
-				document.getElementById('pixel1').value = arr1+","+arr2;
-			});
-		});
-		
-	</script> -->
-	
 	<!-- //JS -->
 	
 </body>
