--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins&family=Roboto&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins&family=Roboto&display=swap");
 * {
   margin: 0;
   padding: 0;
@@ -9,16 +10,37 @@
 
 html {
   font-size: 62.5%;
+  scroll-behavior: smooth;
 }
 
 body {
-  background: url("/images/background.jpg") no-repeat center center/cover;
-  height: 100vh;
-  overflow: hidden;
+  background: url("/img/background.jpg") no-repeat center center/cover;
+  height: 200vh;
+  overflow: auto;
+
+}
+a{
+  text-decoration: none;
+}
+i{
+  font-size: xx-large;
+  border: 1px solid white;
+  padding: 19px;
+  border-radius: 300px;
+}
+#up{
+  position: absolute;
+  top: 180vh;
+  right: 20px;
+}
+#down{
+  position: absolute;
+  top: 90px;
+  right: 20px;
 }
 
 header {
-  position: fixed;
+  /* position: fixed; */
   width: 100%;
   display: flex;
   justify-content: space-between;
@@ -80,6 +102,18 @@ section h2 {
   letter-spacing: 0.9rem;
   text-align: center;
 }
+section h3 {
+  color: #fff;
+  font-size: 1.5rem;
+  letter-spacing: 0.9rem;
+  text-align: center;
+}
+
+#home{
+  display: block;
+  margin: auto;
+  padding-top: 50px;
+}
 
 @media (max-width: 991px) {
   html {
@@ -96,7 +130,7 @@ section h2 {
   }
 
   header .navbar {
-    position: fixed;
+    /* position: fixed; */
     flex-direction: column;
     min-width: 300px;
     height: 100vh;
@@ -146,12 +180,25 @@ section h2 {
     text-align: center;
   }
 }
+/*About us*/
+.about-us{
+  display: flex;
+  flex-flow: column;
+  padding: 20px;
+  color: white;
+  align-items: center;
+}
+.about-us h2{
+  font-size: xx-large;
+}
 
 /* Contact Us*/
 
 .container {
     width: 100%;
-    height: 100vh;
+    /* height: fit-content; */
+    margin: 20px;
+    padding: 10px;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -272,6 +319,15 @@ section h2 {
   }
 
   /*Description*/
+  .description{
+    color: white;
+    margin: auto;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    font-size: x-large;
+    width: 70%
+  }  
 
   @media(max-width:1440px){
     .main-agileits {
