--- a/views/login.ejs
+++ b/views/login.ejs
@@ -31,7 +31,7 @@
 					<!--<button class="button button-block"/>Sign Up</button>-->
 				</form>
 				<span style="color:white;">Not a member?</span>
-				<button id="getimage" class="button button-block" href="/api/user/register/">SIGN UP</button>
+				<button id="getimage" class="button button-block" ><a href="/api/user/register"> SIGN UP</a></button>
 			</div>         
 		</div>
 		<!-- //form -->
