--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -39,7 +39,7 @@
 					<button id="signup" class="button button-block"  type="submit">Sign Up</button> 					
 				</form>
 				
-				<button href="/api/user/login" id="signup" class="button button-block" >Login</button>
+				<button id="signup" class="button button-block" ><a href="/api/user/login"> Login</a></button>
 			</div>
          
 		</div>
