--- a/views/imagegrid.ejs
+++ b/views/imagegrid.ejs
@@ -8,6 +8,8 @@
    
     <!-- Include Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+<link href="/styles/login.css" rel="stylesheet" type="text/css" media="all" /> 
+    
     <style>
       .img-dim{
         height: 150px;
@@ -43,7 +45,7 @@
     <form action="/api/user/setpassword/" method="post">
       <input type="hidden" name="imageIds" id="imageIdsInput">
       <input type="hidden" name="userId" id = "userId" data-user-id="<%= userId %>">
-      <button type="submit" onclick="passData()">Submit</button>
+      <button type="submit" class="button button-block" onclick="passData()">Submit</button>
     </form>
     <!-- Include Bootstrap JS -->
     <script>
@@ -61,7 +63,7 @@ images.forEach(image => {
     
     // Add the image ID to the array
     imageIds.push(imageId);
-    
+    mage.classList.add("selected");
     // Do something with the image IDs
     console.log(imageIds);
   });
