--- a/views/imagegrid.ejs
+++ b/views/imagegrid.ejs
@@ -63,7 +63,7 @@ images.forEach(image => {
     
     // Add the image ID to the array
     imageIds.push(imageId);
-    mage.classList.add("selected");
+    image.classList.add("selected");
     // Do something with the image IDs
     console.log(imageIds);
   });
