--- a/views/imageupload.ejs
+++ b/views/imageupload.ejs
@@ -12,7 +12,7 @@
 	<h1>To Upload Image on mongoDB</h1>
 	<hr />
 	<div>
-		<form action="/api/user" method="POST" enctype="multipart/form-data">
+		<form action="/api/user/uploadimages" method="POST" enctype="multipart/form-data">
 			<div>
 				<label for="name">Image Title</label>
 				<input type="text" id="name" placeholder="Name" value="" name="name" required />
